plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.owasp.dependencycheck' version '8.4.0'
}

group = 'com.byeolnight'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    google()
    maven { url 'https://repo.maven.apache.org/maven2' }
}

ext {
    jwtVersion = '0.12.6'
    querydslVersion = '5.0.0'
    awsSdkVersion = '2.29.39'
    springCloudVersion = '2023.0.0'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        mavenBom "software.amazon.awssdk:bom:${awsSdkVersion}"
    }
}

dependencies {
    // Spring Boot Core
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    
    // Spring Cloud Config
    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
    
    // API 문서화
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    
    // JWT 인증
    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"

    // AWS S3 & CloudFront
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:cloudfront'
    implementation 'software.amazon.awssdk:auth'
    
    // 데이터베이스
    runtimeOnly 'com.mysql:mysql-connector-j'
    
    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    
    // Guava (RateLimiter)
    implementation 'com.google.guava:guava:33.0.0-jre'

    // SGP4 위성 궤도 예측 (ISS 관측 예보)
    implementation 'com.github.davidmoten:predict4java:1.3.1'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 테스트
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testRuntimeOnly 'com.h2database:h2'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

// QueryDSL 설정
def querydslDir = layout.buildDirectory.dir('generated/querydsl')

sourceSets {
    main.java.srcDir querydslDir
}

compileJava {
    options.annotationProcessorPath = configurations.annotationProcessor
}

clean {
    delete querydslDir
}

test {
    useJUnitPlatform()

    // CI 환경 메모리 최적화
    if (System.getenv('CI') == 'true') {
        maxHeapSize = '1g'
        jvmArgs '-XX:MaxMetaspaceSize=256m', '-XX:+UseG1GC'
    }
}